--- a/demos/ld1-angular-18-r1/src/app/app.component.html
+++ b/demos/ld1-angular-18-r1/src/app/app.component.html
@@ -1,3 +1,6 @@
+<h1 style="color:maroon">{{title}}</h1>
+
+-----
 <h2>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quas voluptatibus perferendis tempore culpa, aspernatur nesciunt aut accusamus similique maiores harum accusantium totam cum quaerat eligendi cumque adipisci repudiandae voluptatum!
 </h2>
