--- a/demos/ld1-angular-18-r1/src/app/app.component.html
+++ b/demos/ld1-angular-18-r1/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Our app is running successfully!</h1>
-{{employees}}
-<ol *ngFor="let employee of employees">
+<!-- {{employees}} -->
+<ol *ngFor="let employee of employeesList">
 <li>{{employee.id}}</li>
 <li>{{employee.name}}</li>
 <li>{{employee.salary}}</li>
