--- a/demos/ld1-angular-18-r1/src/app/add-emp/add-emp.component.html
+++ b/demos/ld1-angular-18-r1/src/app/add-emp/add-emp.component.html
@@ -7,5 +7,5 @@
 <input type="text" id="salary" formControlName="salary">
 <input type="text" id="role" formControlName="employeeRole">
 <!-- <input type="text" id="domain" value = "Health Care"> -->
-<button type="submit">Save</button>
+<button class="btn btn-success" type="submit">Save</button>
 </form> 
