--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
@@ -1,1 +1,21 @@
-<h1>Building our angular app!</h1>
+<nav class="navbar navbar-dark navbar-expand-sm" style="background-color:black" >
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a routerLink="employees" class="nav-link">Employee List</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="add" class="nav-link">Add Employee</a>
+        </li>
+        <!-- <li class="nav-item">
+            <a routerLink="employees-sb" class="nav-link">Employee List SB</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="add-sb" class="nav-link">Add Employee SB</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="beverage-form" class="nav-link">Beverage Form</a>
+        </li> -->
+    </ul>
+</nav>
+
+<router-outlet></router-outlet>
