--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
@@ -1,20 +1,21 @@
-<nav class="navbar navbar-dark navbar-expand-sm" style="background-color:black" >
+<nav class="navbar navbar-dark navbar-expand-sm" style="background-color:black">
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a routerLink="employees" class="nav-link">Employee List</a>
+        <li class="nav-item" >
+            <a routerLink="login" *ngIf="!isLoggedIn()" class="nav-link"
+            style="color: #00ff00; font-weight: bold;">Login</a>
         </li>
         <li class="nav-item">
-            <a routerLink="add" class="nav-link">Add Employee</a>
+            <a routerLink="register" *ngIf="!isLoggedIn()" class="nav-link">Register</a>
         </li>
-        <!-- <li class="nav-item">
-            <a routerLink="employees-sb" class="nav-link">Employee List SB</a>
-        </li>
-        <li class="nav-item">
-            <a routerLink="add-sb" class="nav-link">Add Employee SB</a>
+        <li class="nav-item"> 
+            <a routerLink="employees" *ngIf="isLoggedIn()" class="nav-link">Employee List</a>
         </li>
         <li class="nav-item">
-            <a routerLink="beverage-form" class="nav-link">Beverage Form</a>
-        </li> -->
+            <a routerLink="add" *ngIf="isLoggedIn()" class="nav-link">Add Employee</a>
+        </li>
+        <li class="nav-item" *ngIf="isLoggedIn()">
+            <a (click)="logout()" class="nav-link">Logout</a>
+        </li>
     </ul>
 </nav>
 
