--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/login/login.component.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/login/login.component.html
@@ -1,3 +1,16 @@
-<div class="container">
-    <h1>Login Component!</h1>
-</div>
+<form [formGroup] = "loginForm" (ngSubmit) = "onSubmit()">
+    <br><br>
+    <div class="form-group">
+        <label for="loginid">Login ID</label>
+        <br>
+        <input type="text" class="form-control" id="loginid" formControlName="loginid" style="width: 300px;">
+    </div>
+    <br>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <br>
+        <input type="password" class="form-control" id="password" formControlName="password" style="width: 300px;">
+    </div>
+    <br>
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
