--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
@@ -18,5 +18,7 @@
         </li>
     </ul>
 </nav>
+<div class="container" style="margin-top:50px; background-color: aquamarine; padding:50px; border-radius: 50px;">
+    <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
