--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/list-emp/list-emp.component.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/list-emp/list-emp.component.html
@@ -1,3 +1,29 @@
 <div class="container">
-    <h1>List Emp Component!</h1>
+    <br>
+    <h5>Employee Detials</h5>
+    <div>
+        <div class="table-striped" style="width:500px">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Emp ID</th>
+                        <th>Emp Name</th>
+                        <th>Emp Salary</th>
+                        <th>Delete</th>
+                        <th>Update</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let employee of employees">
+                        <td>{{employee.id}}</td>
+                        <td>{{employee.name}}</td>
+                        <td>{{employee.salary}}</td>
+                        <td><button (click)= "deleteEmployee(employee)" class="btn btn-danger">Delete</button></td>
+                        <td><button (click)="updateEmployee(employee.id)" class="btn btn-warning">Update</button></td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
 </div>
