--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/register/register.component.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/register/register.component.html
@@ -8,6 +8,26 @@
             <input type="text" formControlName="adminName" class="form-control w-50"
                 [ngClass]="{ 'is-invalid' : registerForm.controls['adminName'].errors, 'boldItalicError' : registerForm.controls['adminName'].errors}" />
         </div>
+
+        <div *ngIf="registerForm.controls['adminName'].invalid"  class="boldItalicError">
+            <div *ngIf="registerForm.controls['adminName']?.errors?.['required']">
+                Admin Name is Required!
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label>Email</label>
+            <input type="text" formControlName="email" class="form-control w-50"
+          [ngClass]="{ 'is-invalid': registerForm.controls['email'].errors, 'boldItalicError' : registerForm.controls['email'].errors }" />
+            <div *ngIf="registerForm.controls['email'].errors" class="invalid-feedback">
+                <div *ngIf="registerForm.controls['email'].errors?.['required']">Email is required</div>
+                <div *ngIf="registerForm.controls['email'].errors?.['email']">Email must be a valid email address</div>
+            </div>
+        </div>
+                <br>
+                <div class="form-group"> 
+                    <button class="btn btn-primary">Register</button>
+                </div>
     </form>
 </div>
 
