--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/app/app.component.html
@@ -19,6 +19,7 @@
     </ul>
 </nav>
 <div class="container" style="margin-top:50px; background-color: aquamarine; padding:50px; border-radius: 50px;">
+    <h1>Hello, lp1b-EFicitiShopAngularSPA-NG18 </h1>
     <router-outlet></router-outlet>
 </div>
 
